<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/groupOne">
        <item
            android:id="@+id/itemLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/dsm_login" />

        <item
            android:id="@+id/registrationFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_login"
            android:title="@string/dsm_register" />

        <item
            android:id="@+id/itemFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/dsm_favorites" />

        <item
            android:id="@+id/itemBasket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/dsm_basket" />

        <item
            android:id="@+id/itemSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/dsm_settings" />
    </group>


    <group
        android:id="@+id/groupTwo">
        <item
            android:id="@+id/itemLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/dsm_log_out"
            android:icon="@drawable/ic_search"/>

        <item
            android:id="@+id/itemExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/dsm_exit" />
    </group>
</menu>