<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constrLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_cream">

    <ImageView
        android:id="@+id/iv_login_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reg_general_figure" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoginOk"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_my"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etLoginEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/reg_et_background"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/register_enter_user_email"
            android:inputType="text|textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/reg_et_background"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/register_enter_user_password"
            android:inputType="text|textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@id/etLoginEmail"
            app:layout_constraintStart_toStartOf="@id/etLoginEmail"
            app:layout_constraintTop_toBottomOf="@id/etLoginEmail" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLoginGo"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/transparent_my"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/reg_ripple_button"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@id/etLoginPassword"
            app:layout_constraintStart_toStartOf="@id/etLoginPassword"
            app:layout_constraintTop_toBottomOf="@id/etLoginPassword">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/reg_button_go_background"
                android:gravity="center"
                android:text="@string/register_go"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvLoginForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login_forget_password"
            android:textColor="@color/hint_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cvLoginGo"
            app:layout_constraintTop_toBottomOf="@id/cvLoginGo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTooManyAttempt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_my"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvLoginMistakeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/sorry"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/sorry_message_back"
            android:paddingHorizontal="22dp"
            android:paddingTop="5dp"
            android:text="@string/sorry_message_wrong_password"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginMistakeTitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvTryAgain"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/transparent_my"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/reg_ripple_button"
            app:cardCornerRadius="21dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMessage">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/reg_et_background"
                android:gravity="center"
                android:text="@string/try_again"
                android:textColor="@color/hint_color"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvRegNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:text="@string/new_registration"
            android:textColor="@color/hint_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/cvTryAgain"
            app:layout_constraintTop_toBottomOf="@id/cvTryAgain" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>