<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/show_items_back">

    <TextView
        android:id="@+id/tvCheckTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/title_check_bill"
        android:textColor="@color/toolbar_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBackInScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="19dp"
        app:layout_constraintTop_toBottomOf="@id/tvCheckTitle"
        app:layout_constraintBottom_toTopOf="@id/ivBackgroundB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back_scroll_bill" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="@id/ivBackInScroll"
        app:layout_constraintBottom_toBottomOf="@id/ivBackInScroll"
        app:layout_constraintStart_toStartOf="@id/ivBackInScroll"
        app:layout_constraintEnd_toEndOf="@id/ivBackInScroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvHeaderBill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bill_summary"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="28sp" />
            <TextView
                android:id="@+id/tvSubHeaderBill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:gravity="center|top"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvBill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/test_real_case"
                android:textStyle="bold"
                android:textSize="18sp" />
        </LinearLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/ivBackgroundB"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginBottom="105dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/item_choose_back3" />



    <TextView
        android:id="@+id/tvSend"
        android:layout_width="380dp"
        android:layout_height="120dp"
        android:text="@string/send"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/user_name_home_screen"
        app:layout_constraintStart_toStartOf="@id/ivBackgroundB"
        app:layout_constraintTop_toTopOf="@+id/ivBackgroundB"
        app:layout_constraintBottom_toBottomOf="@id/ivBackgroundB"
        app:layout_constraintEnd_toEndOf="@id/ivBackgroundB"/>

    <ImageView
        android:id="@+id/ivCurlSend"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:scaleType="fitXY"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="17dp"
        app:srcCompat="@drawable/item_curl"
        app:layout_constraintEnd_toEndOf="@id/ivBackgroundB"
        app:layout_constraintBottom_toBottomOf="@id/ivBackgroundB"/>

</androidx.constraintlayout.widget.ConstraintLayout>