<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clManyWrongAttempts"
    android:background="@color/background_cream">

    <ImageView
        android:id="@+id/ivWrongBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/reg_general_figure" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/sorry"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:layout_marginHorizontal="60dp"
        android:paddingTop="5dp"
        android:paddingHorizontal="22dp"
        android:background="@drawable/sorry_message_back"
        android:text="@string/sorry_message_wrong_password"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTryAgain"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="35dp"
        android:backgroundTint="@color/transparent_my"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/reg_ripple_button"
        app:cardCornerRadius="21dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/reg_et_background"
            android:gravity="center"
            android:text="@string/try_again"
            android:textColor="@color/hint_color"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvRegNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_registration"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/hint_color"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintTop_toBottomOf="@id/cvTryAgain"
        app:layout_constraintEnd_toEndOf="@id/cvTryAgain"/>

</androidx.constraintlayout.widget.ConstraintLayout>